# Dino-game

./: README.md  db.sqlite3  pyproject.toml
Dino/: admin.py  apps.py  forms.py  managers.py  models.py  my_middleware.py  serializers.py  signals.py  views.py
Dino/migrations/: 0001_initial.py  0002_alter_customuser_level.py  0002_players_email.py  0003_alter_levels_level.py  0003_levels_players_level.py  0004_alter_players_level.py
Dino/templates/: index.html  login.html  register.html  top10.html
first/: .env  asgi.py  settings.py  urls.py
frontend/: game.js  package.json
staticfiles/: game.js  package-lock.json
