[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["IvanaMishich <ivana.mishich@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
