[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["IvanaMishich <ivana.mishich@rambler.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.1"
psycopg = "^3.2.2"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
pygame = "^2.6.1"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
